Carregar lista de setores na tela de cadastro de solicitação

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -11,6 +11,10 @@
         <servlet-name>br.pucpr.gss.GSS LoginService</servlet-name>
         <servlet-class>br.pucpr.gss.server.service.LoginServiceImpl</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>br.pucpr.gss.GSS SolicitacaoService</servlet-name>
+        <servlet-class>br.pucpr.gss.server.service.SolicitacaoServiceImpl</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>com.pucpr.gss.GSS CadastroService</servlet-name>
         <url-pattern>/GSS/Cadastro</url-pattern>
@@ -18,5 +22,9 @@
     <servlet-mapping>
         <servlet-name>br.pucpr.gss.GSS LoginService</servlet-name>
         <url-pattern>/GSS/Login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>br.pucpr.gss.GSS SolicitacaoService</servlet-name>
+        <url-pattern>/GSS/Solicitacao</url-pattern>
     </servlet-mapping>
 </web-app>
